--- a/index.html
+++ b/index.html
@@ -87,7 +87,8 @@
                 <div class="row">
                     <div class="col-lg-3 col-md-6 col-sm-12">
                         <div class="card" style="width:315px">
-                            <center><img class="card-img-top" src="pic/pic1.jpg" alt="Card image" style="width: 300px;"></center>
+                            <center><img class="card-img-top" src="pic/pic1.jpg" alt="Card image" style="width: 300px;">
+                            </center>
                             <div class="card-body">
                                 <h4 class="card-title">John Doe</h4>
                                 <p class="card-text">Some example text.</p>
@@ -136,18 +137,20 @@
                     </div>
                     <div class="col-lg-3 col-md-6 col-sm-12">
                         <div class="card" style="width:315px">
-                            <center><img class="card-img-top" src="pic/pic2.PNG" alt="Card image" style="width: 328px;"></center>
+                            <center><img class="card-img-top" src="pic/pic2.PNG" alt="Card image" style="width: 328px;">
+                            </center>
                             <div class="card-body">
                                 <h4 class="card-title">John Doe</h4>
                                 <p class="card-text">Some example text.</p>
                                 <!-- Button to Open the Modal -->
                                 <button type="button" class="btn btn-primary" data-bs-toggle="modal"
-                                    data-bs-target="#myModal2"> <!-- The Modal เปลี่ยน #myModal เป็น #myModal2 หรืออะไรก็ได้ -->
+                                    data-bs-target="#myModal2">
+                                    <!-- The Modal เปลี่ยน #myModal เป็น #myModal2 หรืออะไรก็ได้ -->
                                     Open modal
                                 </button>
 
                                 <!-- The Modal เปลี่ยน myModal เป็น myModal2 หรืออะไรก็ได้ -->
-                                <div class="modal" id="myModal2"> 
+                                <div class="modal" id="myModal2">
                                     <div class="modal-dialog">
                                         <div class="modal-content">
 
@@ -185,7 +188,8 @@
                     </div>
                     <div class="col-lg-3 col-md-6 col-sm-12">
                         <div class="card" style="width:315px">
-                            <center><img class="card-img-top" src="pic/pic3.jpg" alt="Card image" style="width: 258px;"></center>
+                            <center><img class="card-img-top" src="pic/pic3.jpg" alt="Card image" style="width: 258px;">
+                            </center>
                             <div class="card-body">
                                 <h4 class="card-title">John Doe</h4>
                                 <p class="card-text">Some example text.</p>
@@ -283,7 +287,69 @@
                     </div>
                 </div>
             </div>
-            <div class="card-footer">Footer</div>
+            <div class="card-footer">
+                <footer class="mainfooter" role="contentinfo">
+                    <div class="footer-middle">
+                        <div class="container">
+                            <div class="row">
+                                <div class="col-md-3 col-sm-6">
+                                    <!--Column1-->
+                                    <div class="footer-pad">
+                                        <h4>Home</h4>
+                                        <ul class="list-unstyled">
+                                            <li><a href="#"></a></li>
+                                            <li><a href="#">addreess</a></li>
+                                            <li><a href="#">Tel</a></li>
+                                            <li><a href="#">Email</a></li>
+                                            <li><a href="#">School</a></li>
+
+                                        </ul>
+                                    </div>
+                                </div>
+                                <div class="col-md-3 col-sm-6">
+                                    <!--Column1-->
+                                    <div class="footer-pad">
+                                        <h4>about</h4>
+                                        <ul class="list-unstyled">
+                                            <li><a href="#">name</a></li>
+                                            <li><a href="#">lastname</a></li>
+                                            <li><a href="#">nickname</a></li>
+                                            <li><a href="#">major</a></li>
+
+                                        </ul>
+                                    </div>
+                                </div>
+                                <div class="col-md-3 col-sm-6">
+                                    <!--Column1-->
+                                    <div class="footer-pad">
+                                        <h4>contact</h4>
+                                        <ul class="list-unstyled">
+                                            <li><a href="#">Facebook</a></li>
+                                            <li><a href="#">Line</a></li>
+                                            <li><a href="#">Instagram</a></li>
+                                            <li><a href="#">Twiter</a></li>
+
+                                            <li>
+                                                <a href="#"></a>
+                                            </li>
+                                        </ul>
+                                    </div>
+                                </div>
+                                <div class="col-md-3 col-sm-6">
+                                    <h4>MAP</h4>
+                                    <div id="googleMap" style="width:100%;height:100%;"></div>
+                                </div>
+                            </div>
+                            <div class="row">
+                                <div class="col-md-12 copy">
+                                    <p class="text-center">&copy; Copyright 2020 - Mr.Anuntawee Onarun. All rights
+                                        reserved.</p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </footer>
+            </div>
         </div>
     </div>
 </body>
