--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                             <a class="nav-link" href="javascript:void(0)">HOME</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="about.html">ABOUT</a>
+                            <a class="nav-link" href="https://about.html">ABOUT</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="javascript:void(0)">CONTENT</a>
