--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <div class="container">
         <nav class="navbar navbar-expand-sm navbar-dark bg-dark sticky-top">
             <div class="container-fluid">
-                <a class="navbar-brand" href="javascript:void(0)"><img src="pic/logo.png" alt=""
+                <a class="navbar-brand" href="index.html"><img src="pic/logo.png" alt=""
                         style="width: 40px;"></a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#mynavbar">
                     <span class="navbar-toggler-icon"></span>
@@ -25,10 +25,10 @@
                 <div class="collapse navbar-collapse" id="mynavbar">
                     <ul class="navbar-nav me-auto">
                         <li class="nav-item">
-                            <a class="nav-link" href="javascript:void(0)">HOME</a>
+                            <a class="nav-link" href="index.html">HOME</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="https://about.html">ABOUT</a>
+                            <a class="nav-link" href="about.html">ABOUT</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="javascript:void(0)">CONTENT</a>
