--- a/about.html
+++ b/about.html
@@ -49,7 +49,16 @@
         </nav>
 
         <div class="card">
+            <div class="card-header">
 
+            </div>
+            <div class="card-body">
+                <div class="row">
+                    <div class="col-lg-3 col-md-6 col-sm-12">
+                        <img src="pic/apic1.jpg" alt="" >
+                    </div>
+                </div>
+            </div>
             <div class="card-footer">
                 <footer class="mainfooter" role="contentinfo">
                     <div class="footer-middle">
@@ -105,7 +114,7 @@
                             </div>
                             <div class="row">
                                 <div class="col-md-12 copy">
-                                    <p class="text-center">&copy; Copyright 2020 - Mr.Anuntawee Onarun. All rights
+                                    <p class="text-center">&copy; Copyright 2020 - Mr.Tiradon permpoonma. All rights
                                         reserved.</p>
                                 </div>
                             </div>
