--- a/index.html
+++ b/index.html
@@ -342,7 +342,7 @@
                             </div>
                             <div class="row">
                                 <div class="col-md-12 copy">
-                                    <p class="text-center">&copy; Copyright 2020 - Mr.Anuntawee Onarun. All rights
+                                    <p class="text-center">&copy; Copyright 2020 - Mr.Tiradon permpoonma. All rights
                                         reserved.</p>
                                 </div>
                             </div>
