--- a/about.html
+++ b/about.html
@@ -50,12 +50,76 @@
 
         <div class="card">
             <div class="card-header">
+                <center>
+                    <h1>สิ่งที่ชอบคือ "เป๊ปซี่(PEPSI)"</h1>
+                </center>
+                <div id="demo" class="carousel slide" data-bs-ride="carousel">
 
+                    <!-- Indicators/dots -->
+                    <div class="carousel-indicators">
+                        <button type="button" data-bs-target="#demo" data-bs-slide-to="0" class="active"></button>
+                        <button type="button" data-bs-target="#demo" data-bs-slide-to="1"></button>
+                        <button type="button" data-bs-target="#demo" data-bs-slide-to="2"></button>
+                    </div>
+
+                    <!-- The slideshow/carousel -->
+                    <div class="carousel-inner">
+                        <div class="carousel-item active">
+                            <img src="pic/apic1.jpg" alt="Los Angeles" class="d-block w-100">
+                        </div>
+                        <div class="carousel-item">
+                            <img src="pic/apic2.jpg" alt="Chicago" class="d-block w-100 ">
+                        </div>
+                        <div class="carousel-item">
+                            <img src="pic/apic3.jpg" alt="New York" class="d-block w-100 ">
+                        </div>
+                    </div>
+
+                    <!-- Left and right controls/icons -->
+                    <button class="carousel-control-prev" type="button" data-bs-target="#demo" data-bs-slide="prev">
+                        <span class="carousel-control-prev-icon"></span>
+                    </button>
+                    <button class="carousel-control-next" type="button" data-bs-target="#demo" data-bs-slide="next">
+                        <span class="carousel-control-next-icon"></span>
+                    </button>
+                </div>
             </div>
             <div class="card-body">
                 <div class="row">
-                    <div class="col-lg-3 col-md-6 col-sm-12">
-                        <img src="pic/apic1.jpg" alt="" >
+                    <div class="col-lg-6 col-md-12">
+                        <img src="pic/apic4.jpg" alt="" width="600px" height="400px">
+                    </div>
+                    <div class="col-xl-6 col-lg-12">
+                        <center>
+                            <h1>ข้อมูลเกี่ยวกับ  เป๊ปซี่</h1>
+                        </center>
+                        <h5>
+                            <p>เป๊ปซี่ โคล่า คือ เครื่องดื่มอัดลมที่ผลิตโดยบริษัทเป๊ปซี่เป็นบริษัทคู่แข่งราย
+                                สำคัญของโคคา โคล่า เป๊ปซี่ โคล่ากำเนิดขึ้นครั้งแรกโดยการคิดค้นของเภสัชกร คาแร็ป แรดแฮม
+                                ที่นิวเบิร์น
+                                รัฐนอร์ทแคโรไลนาช่วงทศวรรษ 1800-1900 แรกเริ่มเครื่องดื่มชนิดนี้ตั้งชื่อว่า
+                                "เครื่องดื่มของแบรด
+                                (Brad's drink)" โดยมีเจตนาจะผลิตเครื่องดื่มชนิดนี้ขึ้นเพื่อช่วยรักษาอาการปวดท้อง
+                                ต่อมาแรดแฮมจึงตั้งชื่อเครื่องดื่มนี้ว่าเป๊ปซี่จากอาการปวดท้องที่เรียกว่า ดิสเป๊ปเซีย
+                                ชื่อเป๊ปซี่นั้นจดทะเบียนเครื่องหมายการค้าเมื่อวันที่ 16 มิถุนายน 1903
+                                ส่วนผสมของเป๊ปซี่ถือเป็นความลับ
+                                ทางการค้าเช่นเดียวกับสูตรผสมของ โค้ก เคเอฟซี และแม็คโดนัลด์</p>
+                        </h5>
+                    </div>
+                </div>
+                <br>
+                <div class="row">
+                    <div class="col-xl-6 col-lg-12">
+                        <center>
+                            <h1>ทำไมถึงชอบกิน</h1>
+                        </center>
+                            <h3><p></p></h3>
+                    </div>
+                    <div class="col-lg-6 col-md-12">
+                        <img src="pic/apic5.jpg" alt="" width="630px" height="400px">
+                        <p>
+                        <h3></h3>
+                        </p>
                     </div>
                 </div>
             </div>
