--- a/about.html
+++ b/about.html
@@ -85,14 +85,33 @@
                 </div>
             </div>
             <div class="card-body">
+                <center>
+                    <h1>
+                        <p class="text-bg-dark">ข้อมูลเกี่ยวกับ เป๊ปซี่</p>
+                    </h1>
+                </center>
+                <br>
                 <div class="row">
                     <div class="col-lg-6 col-md-12">
-                        <img src="pic/apic4.jpg" alt="" width="600px" height="400px">
+                        <div class="row">
+                            <div class="col-6">
+                                <center><img src="pic/apic4.jpg" alt="" width="200px" height="200px"></center>
+                            </div>
+                            <div class="col-6">
+                                <center><img src="pic/apic5.jpg" alt="" width="200px" height="200px"></center>
+                            </div>
+                        </div>
+                        <br>
+                        <div class="row">
+                            <div class="col-6">
+                                <center><img src="pic/apic6.jpg" alt="" width="200px" height="200px"></center>
+                            </div>
+                            <div class="col-6">
+                                <center><img src="pic/apic7.png" alt="" width="200px" height="200px"></center>
+                            </div>
+                        </div>
                     </div>
                     <div class="col-xl-6 col-lg-12">
-                        <center>
-                            <h1>ข้อมูลเกี่ยวกับ  เป๊ปซี่</h1>
-                        </center>
                         <h5>
                             <p>เป๊ปซี่ โคล่า คือ เครื่องดื่มอัดลมที่ผลิตโดยบริษัทเป๊ปซี่เป็นบริษัทคู่แข่งราย
                                 สำคัญของโคคา โคล่า เป๊ปซี่ โคล่ากำเนิดขึ้นครั้งแรกโดยการคิดค้นของเภสัชกร คาแร็ป แรดแฮม
@@ -108,18 +127,33 @@
                     </div>
                 </div>
                 <br>
+                <center>
+                    <h1><p class="text-bg-dark">ทำไมถึงชอบกิน</p></h1>
+                </center>
                 <div class="row">
                     <div class="col-xl-6 col-lg-12">
-                        <center>
-                            <h1>ทำไมถึงชอบกิน</h1>
-                        </center>
-                            <h3><p></p></h3>
+                        <h3>
+                            <p>เพราะว่ารสชาติ อร่อยเเตกต่างจาก ยี่ห้ออื่น เช่น โค้ด(Cake) เอส(est) เเละยื่อห้ออื่นๆ เเละก็ยังมี PEPSI ZERO ที่ใช้สารเเทนความหวานเเทนน้ำตลายเเละ 0 CAL ทำให้ไม่อ้วน</p>
+                        </h3>
                     </div>
                     <div class="col-lg-6 col-md-12">
-                        <img src="pic/apic5.jpg" alt="" width="630px" height="400px">
-                        <p>
-                        <h3></h3>
-                        </p>
+                        <div class="row">
+                            <div class="col-6">
+                                <center><img src="pic/apic8.png" alt="" width="200px" height="200px"></center>
+                            </div>
+                            <div class="col-6">
+                                <center><img src="pic/apic9.jpg" alt="" width="200px" height="200px"></center>
+                            </div>
+                        </div>
+                        <br>
+                        <div class="row">
+                            <div class="col-6">
+                                <center><img src="pic/apic10.jpg" alt="" width="200px" height="200px"></center>
+                            </div>
+                            <div class="col-6">
+                                <center><img src="pic/apic11.jpg" alt="" width="200px" height="200px"></center>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
